// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-details should render with _label="Zusammenfassung" _disabled=false _open=false 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <details class="collapsible kol-details" id="nonce">
      <summary aria-controls="nonce-control" aria-expanded="false" class="collapsible__heading-button kol-details__heading-button" role="button">
        <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
          <span class="collapsible__heading-content">
            <kol-icon _icons="codicon codicon-chevron-right" _label="" class="collapsible__icon kol-details__icon"></kol-icon>
            <span class="collapsible__label kol-details__label">
              Zusammenfassung
            </span>
          </span>
        </strong>
      </summary>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </details>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=false _open=true 1`] = `
<kol-details _open="">
  <template shadowrootmode="open">
    <details class="collapsible collapsible--open kol-details" id="nonce" open="">
      <summary aria-controls="nonce-control" aria-expanded="true" class="collapsible__heading-button kol-details__heading-button" role="button">
        <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
          <span class="collapsible__heading-content">
            <kol-icon _icons="codicon codicon-chevron-right" _label="" class="collapsible__icon kol-details__icon"></kol-icon>
            <span class="collapsible__label kol-details__label">
              Zusammenfassung
            </span>
          </span>
        </strong>
      </summary>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </details>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=true _open=false 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <details class="collapsible collapsible--disabled kol-details" id="nonce">
      <summary aria-controls="nonce-control" aria-disabled="true" aria-expanded="false" class="collapsible__heading-button kol-details__heading-button" role="button" tabindex="-1">
        <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
          <span class="collapsible__heading-content">
            <kol-icon _icons="codicon codicon-chevron-right" _label="" class="collapsible__icon kol-details__icon"></kol-icon>
            <span class="collapsible__label kol-details__label">
              Zusammenfassung
            </span>
          </span>
        </strong>
      </summary>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </details>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _disabled=true _open=true 1`] = `
<kol-details _open="">
  <template shadowrootmode="open">
    <details class="collapsible collapsible--disabled collapsible--open kol-details" id="nonce" open="">
      <summary aria-controls="nonce-control" aria-disabled="true" aria-expanded="true" class="collapsible__heading-button kol-details__heading-button" role="button" tabindex="-1">
        <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
          <span class="collapsible__heading-content">
            <kol-icon _icons="codicon codicon-chevron-right" _label="" class="collapsible__icon kol-details__icon"></kol-icon>
            <span class="collapsible__label kol-details__label">
              Zusammenfassung
            </span>
          </span>
        </strong>
      </summary>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </details>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" _level=3 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <details class="collapsible kol-details" id="nonce">
      <summary aria-controls="nonce-control" aria-expanded="false" class="collapsible__heading-button kol-details__heading-button" role="button">
        <h3 class="collapsible__heading kol-details__heading kol-headline kol-headline--h3 kol-headline--single">
          <span class="collapsible__heading-content">
            <kol-icon _icons="codicon codicon-chevron-right" _label="" class="collapsible__icon kol-details__icon"></kol-icon>
            <span class="collapsible__label kol-details__label">
              Zusammenfassung
            </span>
          </span>
        </h3>
      </summary>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </details>
  </template>
</kol-details>
`;

exports[`kol-details should render with _label="Zusammenfassung" 1`] = `
<kol-details>
  <template shadowrootmode="open">
    <details class="collapsible kol-details" id="nonce">
      <summary aria-controls="nonce-control" aria-expanded="false" class="collapsible__heading-button kol-details__heading-button" role="button">
        <strong class="collapsible__heading kol-details__heading kol-headline kol-headline--single kol-headline--strong">
          <span class="collapsible__heading-content">
            <kol-icon _icons="codicon codicon-chevron-right" _label="" class="collapsible__icon kol-details__icon"></kol-icon>
            <span class="collapsible__label kol-details__label">
              Zusammenfassung
            </span>
          </span>
        </strong>
      </summary>
      <div class="collapsible__wrapper kol-details__wrapper">
        <div class="collapsible__wrapper-animation kol-details__wrapper-animation">
          <div aria-hidden="true" class="collapsible__content indented-text kol-details__content" id="nonce-control">
            <slot></slot>
          </div>
        </div>
      </div>
    </details>
  </template>
</kol-details>
`;
